@@ -1,2 +1,3 @@
 uqm_CFILES="3do_blt.c 3do_funcs.c 3do_getbody.c dcqueue.c opengl.c
-		primitives.c pure.c rndzoom.c rotozoom.c sdl_common.c oscilloscope.c"
+		primitives.c pure.c rndzoom.c rotozoom.c sdl_common.c oscilloscope.c
+		canvas.c"
